added sample code

--- a/nodejs/kp-excel/package.json
+++ b/nodejs/kp-excel/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kolgepratik",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "xlsx": "^0.13.5"
+  }
 }
